index.html add mccain_tribute href

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <div id="directory-list">
     <ul>
       <li>
-        <a href="how_was_dinner/">Build a Survey Form - How Was Dinner? - Responsive Web Design Projects</a>
+        <a href="mccain_tribute/" target="_blank">Build a Tribute Page - McCain Tribute - Responsive Web Design Projects</a>
       </li>
       <li>
-        <a href="how_was_dinner/index.html">foo</a>
+        <a href="how_was_dinner/" target="_blank">Build a Survey Form - How Was Dinner? - Responsive Web Design Projects</a>
       </li>
     </ul>
   </div>
