add links between gh-page and repo views

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <div id="directory-list">
     <ul>
       <li>
+        <a href="https://github.com/TrentSPalmer/fcc_challenges" target="_blank">GitHub Repository View of This Page</a>
+      </li>
+      <li>
         <a href="mccain_tribute/" target="_blank">Build a Tribute Page - McCain Tribute - Responsive Web Design Projects</a>
       </li>
       <li>
