--- a/how_was_dinner/index.html
+++ b/how_was_dinner/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="how_was_dinner.css">
-  <title></title>
+  <title>How Was Dinner? - Build a Survey Form - Responsive Web Design Projects</title>
 </head>
 <body>
   <div>
