rename directories with dashes instead of underscores

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <div id="directory-list">
     <ul>
       <li>
-        <a href="https://github.com/TrentSPalmer/fcc_challenges" target="_blank">GitHub Repository View of This Page</a>
+        <a href="https://github.com/TrentSPalmer/fcc-challenges" target="_blank">GitHub Repository View of This Page</a>
       </li>
       <li>
-        <a href="mccain_tribute/" target="_blank">Build a Tribute Page - McCain Tribute - Responsive Web Design Projects</a>
+        <a href="mccain-tribute/" target="_blank">Build a Tribute Page - McCain Tribute - Responsive Web Design Projects</a>
       </li>
       <li>
-        <a href="how_was_dinner/" target="_blank">Build a Survey Form - How Was Dinner? - Responsive Web Design Projects</a>
+        <a href="how-was-dinner/" target="_blank">Build a Survey Form - How Was Dinner? - Responsive Web Design Projects</a>
       </li>
     </ul>
   </div>
