--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <li>
         <a href="how-was-dinner/" target="_blank">Build a Survey Form - How Was Dinner? - Responsive Web Design Projects</a>
       </li>
+      <li>
+        <a href="tools-that-love-you/" target="_blank">Build a Product Landing Page - Tools That Love You - Responsive Web Design Projects</a>
+      </li>
     </ul>
   </div>
 </body>
