--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <li>
         <a href="tools-that-love-you/" target="_blank">Build a Product Landing Page - Tools That Love You - Responsive Web Design Projects</a>
       </li>
+      <li>
+        <a href="lmde-3-disk-encryption/" target="_blank">Build a Product Landing Page - LMDE 3 Disk Encryption - Responsive Web Design Projects</a>
+      </li>
     </ul>
   </div>
 </body>
