--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="tools-that-love-you/" target="_blank">Build a Product Landing Page - Tools That Love You - Responsive Web Design Projects</a>
       </li>
       <li>
-        <a href="lmde-3-disk-encryption/" target="_blank">Build a Product Landing Page - LMDE 3 Disk Encryption - Responsive Web Design Projects</a>
+        <a href="lmde-3-disk-encryption/" target="_blank">Build a Technical Documentation Page - LMDE 3 Disk Encryption - Responsive Web Design Projects</a>
       </li>
     </ul>
   </div>
