--- a/index.html
+++ b/index.html
@@ -34,5 +34,8 @@
     <div>
       <a href="markdown-previewer" target="_blank">Markdown Previewer</a>
     </div>
+    <div>
+      <a href="drum-machine" target="_blank">Drum Machine</a>
+    </div>
   </body>
 </html>
