add github label for markdown-previewer

--- a/markdown-previewer/index.html
+++ b/markdown-previewer/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <header id="buttonHeader">
+      <a href="https://github.com/TrentSPalmer/fcc-challenges/tree/gh-pages/markdown-previewer" target="_blank" id="forkOnGitHub" class="btn"><i class="fab fa-github"></i></a>
       <button id="eraseButton" class="btn">Erase Editor</button>
       <button id="reloadButton" class="btn">Reload Example</button>
     </header>
