--- a/index.html
+++ b/index.html
@@ -41,5 +41,8 @@
     <div>
       <a class="link" href="drum-machine" target="_blank">Drum Machine</a>
     </div>
+    <div>
+      <a class="link" href="drum-machine-react/build" target="_blank">Drum Machine React</a>
+    </div>
   </body>
 </html>
