--- a/drum-machine-react/public/index.html
+++ b/drum-machine-react/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>
-      Drum Machine - Build a Drum Machine - Front End Libraries Projects
+      Drum Machine React - Build a Drum Machine - Front End Libraries Projects
     </title>
   </head>
   <body>
