--- a/index.html
+++ b/index.html
@@ -44,5 +44,8 @@
     <div>
       <a class="link" href="drum-machine-react/build" target="_blank">Drum Machine React</a>
     </div>
+    <div>
+      <a class="link" href="calculator-react/build" target="_blank">Calculator React</a>
+    </div>
   </body>
 </html>
