--- a/index.html
+++ b/index.html
@@ -47,5 +47,8 @@
     <div>
       <a class="link" href="calculator-react/build" target="_blank" rel="noopener noreferrer">Calculator React</a>
     </div>
+    <div>
+      <a class="link" href="pomodoro-clock-react/build" target="_blank" rel="noopener noreferrer">Pomodoro Clock React</a>
+    </div>
   </body>
 </html>
